--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 html {
   font-size: 62.5%;
@@ -14,56 +13,28 @@ input,
 select,
 button,
 textarea {
-  font-family: Montserrat, Helvetica, Arial, sans-serif;
-  font-size: 1.6rem;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 2rem;
 }
 
 .grid-container {
-  display: grid;
-  grid-template-areas:
-    "header"
-    "main"
-    "footer";
   grid-template-rows: 5rem 1fr 5rem;
   grid-template-columns: 1fr;
-  height: 100%;
+  height: 100vh;
 }
 a {
   text-decoration: none;
 }
-a:hover {
-  color: #ff8000;
-}
-header {
-  grid-area: header;
-  background-color: #203040;
-  color: #ffffff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem;
-}
-header a {
-  color: #ffffff;
-  text-decoration: none;
-}
+
 main {
   grid-area: main;
-  height: 100%;
-}
-footer {
-  grid-area: footer;
-  background-color: #203040;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 100vh;
 }
 
 .content {
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
+  height: 100vh;
 }
 .main {
   flex: 3 60rem;
@@ -76,6 +47,10 @@ footer {
   display: flex;
   align-items: center;
   background-color: #1C1C1C;
+}
+.customer-center{
+  flex: 1 20rem;
+  height: 100vh;
 }
 
 /* Menu */
@@ -94,4 +69,16 @@ footer {
   background-color: white;
 }
 
+/* Customer Center */
+.card-center {
+  flex-direction: row !important;
+}
+.card-img{
+  width: 35% !important;
 
+}
+
+.content-center {
+  overflow:auto;
+  height: 100%;
+}
