--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,77 @@ a {
 }
 
 main {
-  grid-area: main;
   height: 100vh;
 }
 
+
+
+.fill-height {
+  display: flex;
+  flex-direction: column;
+}
+.fill-height > div {
+  flex: 1;
+
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.fill-width {
+  display: flex;
+  flex-direction: row;
+}
+.fill-width > div {
+  flex: 1rem;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+.fill-width > div.bigger {
+  flex: 1 50rem;
+
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.fill-width > div.smaller {
+  flex: 1;
+
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+hr.vertical{ 
+  border: none;
+  border-left: 1px solid hsla(200, 10%, 50%,100);
+  height: 100vh;
+  width: 1px;       
+}
+
+@media all and (max-width: 640px) {
+  .fill-width {
+    display: flex;
+    flex-direction: column;
+  }
+  .fill-width > div {
+    flex: 1;
+  
+    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .fill-width > div.blocked {
+    flex: 1rem;
+  
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+}
