--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,69 @@ main {
   height: 100vh;
 }
 
+hr.vertical{ 
+  border: none;
+  border-left: 1px solid hsla(200, 10%, 50%,100);
+  height: 100vh;
+  width: 1px;       
+}
 
+/* Main UI */
 
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
+}
+.main {
+  flex: 3 50rem;
+}
+.sidebar {
+  flex: 1 15rem;
+} 
+.menu {
+  flex: 0 1rem;
+  display: flex;
+  align-items: center;
+  background-color: #1C1C1C;
+}
+.customer-center{
+  flex: 1 15rem;
+  height: 100vh;
+}
+.dailyStatistics{
+  flex: 1;
+  height: 100vh;
+}
+.businessSumary{
+  flex: 1 20rem;
+  height:100vh;
+}
+.teams{
+  flex: 1 20rem;
+  height: 100vh;
+}
+
+/* end main ui */
+
+/* Menu */
+.flex-column{
+  color: white;
+  width: 100%;
+  display: table-cell;
+  vertical-align: middle;
+  position: relative;
+}
+.nav-link { 
+  color: white;
+}
+.nav-link:hover, .nav-link.active{
+  color: black;
+  background-color: white;
+}
+/* end menu */
+
+/* flex */
 .fill-height {
   display: flex;
   flex-direction: column;
@@ -44,11 +105,11 @@ main {
   justify-content: center;
   flex-direction: column;
 }
-.fill-width {
+.fill-width, .fill-width-blocked {
   display: flex;
   flex-direction: row;
 }
-.fill-width > div {
+.fill-width > div, .fill-width-blocked > div {
   flex: 1rem;
 
   display: flex;
@@ -73,12 +134,7 @@ main {
   flex-direction: row;
 }
 
-hr.vertical{ 
-  border: none;
-  border-left: 1px solid hsla(200, 10%, 50%,100);
-  height: 100vh;
-  width: 1px;       
-}
+
 
 @media all and (max-width: 640px) {
   .fill-width {
@@ -93,11 +149,27 @@ hr.vertical{
     justify-content: center;
     flex-direction: column;
   }
-  .fill-width > div.blocked {
+  .fill-width-blocked {
+    display: flex;
+    flex-direction: row;
+  }
+  .fill-width-blocked > div.blocked {
     flex: 1rem;
   
     display: flex;
     justify-content: center;
     flex-direction: row;
   }
+  .fill-width > div.bigger {
+    flex: 1;
+  
+    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+  .dailyStatistics{
+    min-width: 400px;
+  }
 }
+ /* end flex */
