--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,9 @@ hr.vertical{
   height: 100vh;
   width: 1px;       
 }
-
+caption.e-hide{
+  display: none;
+}
 /* Main UI */
 
 .content {
@@ -134,9 +136,21 @@ hr.vertical{
   flex-direction: row;
 }
 
+ /* end flex */
 
+/* GENERICTABLE */
+.my-scrollbar {
+  position: relative;
+  height: 19rem;
+  width: 100%;
+  overflow-y: auto;
+  display: block;
+}
+
+/* end GenericTable */
 
 @media all and (max-width: 640px) {
+  /* FLEX */
   .fill-width {
     display: flex;
     flex-direction: column;
@@ -168,8 +182,8 @@ hr.vertical{
     justify-content: center;
     flex-direction: row;
   }
+  /* end flex */
   .dailyStatistics{
     min-width: 400px;
   }
 }
- /* end flex */
